--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "primetrade-backend",
   "version": "1.0.0",
-  "description": "Scalable REST API with Authentication & Role-Based Access",
+  "description": "Task management REST API",
   "main": "src/server.js",
   "type": "module",
   "scripts": {
@@ -9,9 +9,9 @@
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["express", "mongodb", "jwt", "rest-api"],
+  "keywords": ["express", "mongodb", "jwt"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
