--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,8 @@
 NODE_ENV=development
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/primetrade
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+PORT=5001
+MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority&appName=<appName>
+JWT_SECRET=your_jwt_secret_key_change_in_production
 JWT_EXPIRE=7d
-JWT_REFRESH_SECRET=your_refresh_token_secret_key
+JWT_REFRESH_SECRET=your_refresh_token_secret_change_in_production
 JWT_REFRESH_EXPIRE=30d
+CLIENT_URL=http://localhost:3000
